Fix text alignment

--- a/moneyapp/src/theme/styles.css
+++ b/moneyapp/src/theme/styles.css
@@ -41,5 +41,5 @@ ion-content {
 }
 
 ion-item {
-  text-align: center;
+  text-align: left;
 }
